# apx-subsystem-settings

./: main.sh  meson.build
.github/workflows/: release.yml
apx_subsystem_settings/: apx-subsystem-settings.gresource.xml  apx-subsystem-settings.in  container.py  dialog_installation.py  main.py  meson.build  program.py  window.py
apx_subsystem_settings/backends/: apx.py  meson.build
apx_subsystem_settings/gtk/: window.ui
data/: com.cosmo.ApxSubsystemSettings.desktop.in  com.cosmo.ApxSubsystemSettings.gschema.xml  meson.build
data/icons/: meson.build
debian/: changelog  control
vanilla_control_center/: main.py  window.py
vanilla_control_center/backends/: meson.build
vanilla_control_center/gtk/: window.ui
